# DataPlatform

./: stdafx.h
Utils/: Xstring.cpp  Xstring.h  blockqueue.h  buffer.h  log.h  stdafx.h  strTest.cpp  test
Utils/MyTestDemo/: SharedMemoryDemo  SharedMemoryDemo.cpp  demo1  demo1.cpp
Utils/log/: CMakeLists.txt  Dockerfile  blockqueue.h  log.cpp  log.h  logTest.cpp
public/: _public.cpp
